--- a/api-service/src/main/resources/application.yaml
+++ b/api-service/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: api-service
+    name: vendoria-api
   thymeleaf:
     check-template-location: false
   datasource:
@@ -19,9 +19,17 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         show_sql: true
 
+
 server:
   port: 5000
 
 eureka:
   client:
     enabled: true
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    enabled: true
+  packages-to-scan: com.vendoria
