--- a/bff-service/pom.xml
+++ b/bff-service/pom.xml
@@ -101,9 +101,9 @@
             <version>1.9.3</version>
         </dependency>
         <dependency>
-            <groupId>com.vendoria</groupId>
-            <artifactId>bff-service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+            <version>3.1.1.RELEASE</version>
         </dependency>
     </dependencies>
 
